--- a/report.Rmd
+++ b/report.Rmd
@@ -35,34 +35,51 @@ write.csv(pheno40279, file = "data/pheno40279")
 write.csv(expr40279, file = "data/expr40279")
 ```
 
+## Load data
+```{r}
+pheno40279 <- read.csv("data/pheno40279", row.names = 1)
+expr40279 <- read.csv("data/expr40279", row.names = 1)
+```
+
+## View data
+```{r}
+head(pheno40279, n = 10)
+head(expr40279, n = 10)
+```
+
 ## Extract relavent features
 ```{r}
 coldata <- pheno40279 %>%
-  select(c("geo_accession", "age (y):ch1", "ethnicity:ch1", "gender:ch1")) %>%
+  select(c("geo_accession", "age..y..ch1", "ethnicity.ch1", "gender.ch1")) %>%
   rename(
     sample_id = geo_accession,
-    age = `age (y):ch1`,
-    ethnicity = `ethnicity:ch1`,
-    gender = `gender:ch1`
+    age = `age..y..ch1`,
+    ethnicity = `ethnicity.ch1`,
+    gender = `gender.ch1`
   ) %>%
   mutate(age = as.numeric(age))
 head(coldata, n = 10)
 ```
 
-## View data
+## transpose mythlation data
 ```{r}
-expr40279 <- t(expr40279)
-expr40279 <- as.data.frame(expr40279)
-head(expr40279, n = 10)
+expr40279_t_mtx <- t(expr40279)
+expr40279_t_df <- as.data.frame(expr40279_t_mtx)
+head(expr40279_t_df, n = 10)
 ```
 
 ## merge selected feature with methylation data
 ```{r}
-expr40279$sample_id <- rownames(expr40279)
-expr40279 <- expr40279 %>%
+expr40279_t_df$sample_id <- rownames(expr40279_t_df)
+expr40279_t_df <- expr40279_t_df %>%
   relocate(sample_id, .before = 1)
-merged40279 <- inner_join(coldata, expr40279, by = "sample_id")
+merged40279 <- inner_join(coldata, expr40279_t_df, by = "sample_id")
 head(merged40279, n = 10)
+```
+
+## Save for future use 
+```{r}
+write.csv(merged40279, file = "data/merged40279")
 ```
 
 ## visualize data
@@ -94,7 +111,6 @@ ggplot(pca40279_pc1_pc2, aes(x = PC1, y = PC2, color = age)) +
   labs(title = "PCA of Methylation Data by Age") +
   theme_minimal()
 ```
-
 
 
 ## split data into training 75% and testing sets 25%
@@ -129,28 +145,80 @@ table(test_data$gender)
 # Fit model
 ## apply Elastic Net algorithm in R package glmnet (have those CpGs contribute less to prediction excluded by have their coefficients to or close to zero, thus reduce the number of variable)
 ```{r}
+# Remove low-variance CpGs from training set
+X_train_raw <- train_data[, -(1:6)]
+cpg_sd <- apply(X_train_raw, 2, sd)
+X_train_filtered <- X_train_raw[, cpg_sd > 0.02]  # Keep only variable CpGs
 
+# Scale the data
+X_train <- scale(X_train_filtered)
+y_train <- train_data$age
 ```
 
 ## 10-fold crossvalidation to optimize regularization parameters
 ```{r}
-
+set.seed(123)
+cv_fit <- cv.glmnet(X_train, y_train, alpha = 0.5, nfolds = 10)
+best_lambda <- cv_fit$lambda.min
 ```
 
 ## bootstrap 500 times, build model for each bootstrap
 ```{r}
+set.seed(123)
+n_boot <- 500
+n_samples <- nrow(X_train)
+selected_cpgs <- matrix(0, nrow = ncol(X_train), ncol = n_boot)
+rownames(selected_cpgs) <- colnames(X_train)
 
+for (i in 1:n_boot) {
+  boot_index <- sample(1:n_samples, size = n_samples, replace = TRUE)
+  x_boot <- X_train[boot_index, ]
+  y_boot <- y_train[boot_index]
+  
+  model <- glmnet(x_boot, y_boot, alpha = 0.5, lambda = best_lambda)
+  coefs <- coef(model)[-1]  # remove intercept
+  selected <- which(coefs != 0)
+  selected_cpgs[selected, i] <- 1
+}
 ```
 
 ## markers presented in more than half of all bootstraps were included in the final model
 ```{r}
+selection_freq <- rowSums(selected_cpgs)
+final_cpgs <- names(selection_freq[selection_freq > (n_boot / 2)])
+```
 
+## 
+```{r}
+x_train_final <- x_train_scaled[, final_cpgs]
+final_model <- glmnet(x_train_final, y_train, alpha = 0.5, lambda = best_lambda)
 ```
 
 
+## 
+```{r}
+# Prepare test set with same selected CpGs and scaling
+x_test <- scale(test_data[, final_cpgs],
+                center = attr(x_train_scaled, "scaled:center")[final_cpgs],
+                scale = attr(x_train_scaled, "scaled:scale")[final_cpgs])
+y_test <- test_data$age
+
+# Predict and evaluate
+pred_age <- predict(final_model, newx = x_test, s = best_lambda)
+correlation <- cor(pred_age, y_test)
+mae <- mean(abs(pred_age - y_test))
+
+cat("Correlation (R):", round(correlation, 3), "\n")
+cat("MAE:", round(mae, 3), "years\n")
+```
 
 
-
+```{r}
+coef_df <- as.data.frame(as.matrix(coef(final_model)))
+coef_df <- coef_df[coef_df$s1 != 0, , drop = FALSE]
+coef_df <- tibble(CpG = rownames(coef_df), Coefficient = coef_df$s1)
+print(coef_df)
+```
 
 
 
